# openpose-example

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/: get_model.py  main.py  make_dataset.py  openpose_example.py  openpose_image.py  stop-dumping.py  train_model.py
src/lib/: inference.py  utils.py  video.py
