[tool.poetry]
name = "openpose_example"
version = "0.1.0"
description = ""
authors = ["wtchrs <wtchr_@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.5"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
