[tool.poetry]
name = "openpose_example"
version = "0.1.0"
description = ""
authors = ["wtchrs <wtchr_@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.5"
numpy = "^1.22.3"
tensorflow = "^2.9.1"
scikit-learn = "^1.1.1"
matplotlib = "^3.5.2"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
